# sixpence

./: .eslintrc.js  .gitignore  .python-version  CHANGELOG.md  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vue.config.js
.electron-vue/: webpack.renderer.config.js
docs/: TODO.md  budget_entry.json  code-names.md  expense_entry.json  logo.xcf  notes.md  release-process.md  todo.md
docs/releases/: grookey.md
etc/: sixpence.desktop
src/: index.ejs  main.py  sixpence.py  test.py
src/app/: about.py  config.py  sixpence.py  version.py
src/controls/: app_bar.py  icon_select.py  nav_rail.py  notification_bar.py  router.py
src/main/: backup.js  config.js  index.js  main.js  preload.js
src/main/dbMigrations/: addArchivedAt.js  addIsArchived.js  delIsArchived.js  migrateNotesToTags.js
src/main/lib/: BudgetDB.js  DBMigrations.js  ExpenseDB.js  Napiform.js  backup.js  config.js  ipc.js  menu.js  settings.js  windowHelper.js
src/models/: base.py  budget.py  budget_group.py  expense.py  tag.py  taggable.py
src/presenters/: budget.py  expenses.py  reports.py  settings.py
src/renderer/: App.vue  main.js
src/renderer/components/: About.vue  BlankSlate.vue  Budget.vue  BudgetEntry.vue  BudgetMonth.vue  DBTest.vue  ExpenseCategory.vue  ExpenseEntry.vue  ExpenseProgress.vue  Expenses.vue  LandingPage.vue  Main.vue  Placeholder.vue  Settings.vue
src/renderer/dbMigrations/: addArchivedAt.js  addIsArchived.js  delIsArchived.js
src/renderer/lib/: BudgetDB.js  Constants.js  DBMigrations.js  ExpenseDB.js  ExpensesDB.js  (+5 more)
src/shared/: Config.js
src/tests/: __init__.py
src/utils/: archive.py  constants.py  date_helper.py  db_helper.py  icon_search.py  locale.py  tools.py
src/views/: about.py  base.py  budget.py  constants.py  expenses.py  home.py  reports.py  settings.py
tasks/: __init__.py  app.py  build.py  check.py  dev.py  util.py
test/unit/: index.js
(+42 files in other folders)
