[project]
name = "sixpence"
version = "2.0.0a"
description = "Simple Budget Manager"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
authors = [{ name = "Craig N. Caroon", email = "craig@caroon.org" }]
dependencies = [
    "flet == 0.26.0",
    "screeninfo ~= 0.8.1",
    "tinydb ~= 4.8.2",
    "PyYAML ~= 6.0.2"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "org.caroon"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Sixpence"

# company name to display in about app dialogs
company = "Caroon Dot Org"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Craig N. Caroon"

[tool.flet.app]
path = "src"
