[project]
name = "sixpence"
version = "2.0.0a"
description = "Simple Budget Manager"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
authors = [{ name = "Craig N. Caroon", email = "craig@caroon.org" }]
# NOTE: currently using requirements.txt
# dependencies = []

[tool.flet]
org = "org.caroon"
product = "Sixpence"
company = "Caroon Dot Org"
copyright = "Copyright (C) 2025 by Craig N. Caroon"
# NOTE: YYMMDD
build_number = 250419

[tool.flet.app]
path = "src"
